<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/about_linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="200dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >
        
        <LinearLayout
	        android:id="@+id/about_linearLayout2"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:orientation="vertical" >
	    	<ImageView
			    android:id="@+id/logo"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:src="@drawable/logo"/>
        </LinearLayout>
	    <LinearLayout
	        android:id="@+id/about_linearLayout3"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_centerHorizontal="true"
        		android:layout_centerVertical="true"
		        android:text="@string/Fragment3_title" />
		 </LinearLayout>
		 
    </LinearLayout>
	    <TextView
		        android:id="@+id/about_txt0"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:text="@string/Fragment3_p0" 
		        android:layout_above="@+id/about_txt1"/>
	    
	    <TextView
		        android:id="@+id/about_txt1"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:text="@string/Fragment3_p1" 
		        android:layout_above="@+id/about_txt2" />
	     
	    <TextView
		        android:id="@+id/about_txt2"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:text="@string/Fragment3_p2" 
		        android:layout_above="@+id/about_txt3"/>
	  
	    <TextView
	        	android:id="@+id/about_txt3"
		        android:layout_width="wrap_content"
		        android:layout_height="60dp"
		        android:text="@string/Fragment3_p3"
		        android:layout_above="@+id/about_link" />
	    
	    <TextView
	        	android:id="@+id/about_link"
		        android:layout_width="wrap_content"
		        android:layout_height="60dp"
		        android:text="@string/Fragment3_link"
		        android:layout_alignParentBottom="true" 
		        android:autoLink="web"/>
</RelativeLayout>